--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,10 @@
     "@emotion/core": "^10.1.1",
     "@emotion/is-prop-valid": "^1.1.2",
     "@emotion/memoize": "^0.7.5",
-    "@emotion/react": "^11.9.0",
+    "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.8.1",
+    "@mantine/core": "^6.0.11",
+    "@mantine/hooks": "^6.0.11",
     "@material-ui/core": "^5.0.0-beta.5",
     "@material-ui/lab": "^5.0.0-alpha.44",
     "@material-ui/unstyled": "^5.0.0-alpha.15",
@@ -19,8 +21,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "date-fns": "^2.28.0",
     "framer-motion": "^10.12.7",
     "react": "^18.2.0",
+    "react-datepicker": "^4.7.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.9.0",
