--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-datepicker": "^4.7.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-number-format": "^4.9.3",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-to-print": "^2.14.6",
