--- a/client/package.json
+++ b/client/package.json
@@ -21,9 +21,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "chart.js": "^4.3.0",
     "date-fns": "^2.28.0",
     "framer-motion": "^10.12.7",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.7.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
